<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_world">Hi Abiola! Learning Android Studio</string>
    <string name="button_text">A big beautiful Button</string>
    <string name="intro_text">I love Android</string>
    <string name="flag_description">US Flag</string>
    <string name="switch_text">Switch on/off</string>
    <string name="cta_text">Press Me</string>
    <string name="checkbox_text">Check this out!</string>
    <string name="edit_text_hint">Enter a text</string>
    <string name="toast_message">Label has been updated.</string>
    <string name="checkbox_message">The checkbox is now</string>
    <string name="undo">Undo</string>
    <string name="enter_name">Enter your name</string>
    <string name="next">Next</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_message">Welcome, %1$s!</string>
    <string name="thank_you">Thank You</string>
    <string name="dont_call_me">Don\'t call me that</string>
    <string name="type_here">Type Here</string>
    <string name="urgent">Urgent</string>
    <string name="add">Add</string>
    <string name="delete_title">Do you want to delete this?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="description_cat_image">A random cat image</string>

    <string name="dad_joke_text">What do you call a hot dog on wheels? Fast food!</string>

    <!-- Toolbar menu items -->
    <string name="choice_1">Choice 1</string>
    <string name="choice_2">Choice 2</string>
    <string name="overflow_item">Overflow item</string>

    <!-- Drawer items -->
    <string name="nav_home">Home</string>
    <string name="nav_dad_joke">Dad Joke</string>
    <string name="nav_exit">Exit</string>

    <!-- Drawer toggle strings -->
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>
</resources>

